# features/brand/domain/entities/find_all_brands_response_entity.go
@@ -1,0 +1,6 @@
+package entities
+
+// FindAllBrandsResponse represents the response for getting all brands.
+type FindAllBrandsResponse struct {
+	Data []BrandEntity `json:"data"`
+}
