# features/brand/domain/entities/find_by_id_brand_response_entity.go
@@ -1,0 +1,6 @@
+package entities
+
+// FindByIDBrandResponse represents the response for getting a brand by ID.
+type FindByIDBrandResponse struct {
+	Data BrandEntity `json:"data"`
+}
