# features/brand/routes.go
@@ -10,6 +10,8 @@ import (
 func Routes(route *gin.RouterGroup, useCase usecases.IBrandUseCase, protectFactory func(handler gin.HandlerFunc, role string) gin.HandlerFunc) {
 	brands := route.Group("/brands")
 	{
+		brands.GET("/", protectFactory(useCase.FindAll, roles.AdminRole))
+		brands.GET("/:id", protectFactory(useCase.FindByID, roles.AdminRole))
 		brands.POST("/", protectFactory(useCase.Create, roles.AdminRole))
 		brands.PUT("/:id", protectFactory(useCase.Update, roles.AdminRole))
 	}
